fix(types): Removing use of Class.newInstance()